--- a/mxllm/index.html
+++ b/mxllm/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Creator</title>
+    <title>MXene Database</title>
+    <link rel="icon" type="image/svg+xml" href="图标.svg" />
     <link href="main.css" rel="stylesheet">
   </head>
   <script>
