--- a/CO2/index.html
+++ b/CO2/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Creator</title>
+    <title>PVSK Database</title>
     <link href="main.css" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href='data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="%233b82f6" stroke-width="2.75" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="9"/><path d="M12 7v10"/><path d="M7 12h10"/></svg>'>
+    <link rel="alternate icon" href="favicon.svg?v=1" type="image/svg+xml">
   </head>
   <script>
     new EventSource('/esbuild').addEventListener('change', () =>
